--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -13,7 +13,7 @@
         <div class="cards-wrapper">
             <div class="card-container">
                 <img src="/Flexbox-Challenges/images/c-d-x-PDX_a_82obo-unsplash 1.png" alt="headphones"/>
-                <diV class="card__content">
+                <div class="card__content">
                     <a href="#">Shopping</a>
                     <h2>AKG N700NCM2</h2>
                     <p class="card__description">Hi-Fi Shop & Service Rustaveli Ave 57.
