--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -9,6 +9,11 @@
     <title>Flexbox-Challenges</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header__wrapper">
+            <h1>DevHaus Leipzig / Flexbox-Challenge</h1>
+        </div>
+    </header>
     <main>
         <div class="cards-wrapper">
             <div class="card-container">
@@ -148,7 +153,12 @@
                     </div>
                 </div>
             </div>
-        </div>    
+        </div> 
     </main>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <a href="/index.html">Return</a>
+        </div> 
+    </footer>
 </body>
 </html>
