--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Flexbox-Challenges/css/reset.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/font-inter-regular.css">
+    <link rel="stylesheet" href="/css/wrapper.css">
     <link rel="stylesheet" href="/Flexbox-Challenges/css/main.css">
     <title>Flexbox-Challenges</title>
 </head>
