--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <li>
                     <a href="/Flexbox-Challenges/index.html">Flexbox-Challenge</a>
                 </li>
+                <li>
+                    <a href="/Shop-Piece-Challenge/index.html">Shop-Piece-Challenge</a>
+                </li>
             </ul>
         </div>
     </main>
