STORE FRONT FINISHED
all ready about store front, just need make responsive in the case that I want to use any day

--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -17,6 +17,7 @@
         </div>
     </header>
     <main> 
+        <div class="top">
             <nav class="nav-bar">
                 <div>
                     <img src="/Shop-Piece-Challenge/images/logo.svg">
@@ -41,6 +42,130 @@
                         </li>
                     </ul>
                 </div>
+            </nav>
+            <div class="top__spotlight">
+                <h1>New arrivals are here</h1>
+                <p>The new arrivals have, well, newly arrived. Check out the latest options from our summer small-batch release while they’re still in stock</p>
+                <button>Shop new arrivals</button>
+            </div>
+        </div>
+        <div class="mid">
+            <div class="mid__header">
+                <div class="header__wrapper">
+                    <h2>Trending Products</h2>
+                </div>
+                <div>
+                    <div>
+                        Shop the collection
+                    </div>
+                    <div>
+                        <img src="/Shop-Piece-Challenge/images/right-row.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="mid__content">
+                <div class="content__product">
+                    <div class="product__img"></div>
+                    <div class="product__tittle">Mens Ensemble</div>
+                    <div class="product__description">Business Casual</div>
+                    <div class="product__price">$240</div>
+                </div>
+                <div class="content__product">
+                    <div class="product__img"></div>
+                    <div class="product__tittle">Air Jordan High</div>
+                    <div class="product__description">Limited Edition</div>
+                    <div class="product__price">$195</div>
+                </div>
+                <div class="content__product">
+                    <div class="product__img"></div>
+                    <div class="product__tittle">Womens Ensemble</div>
+                    <div class="product__description">Autumn Collection</div>
+                    <div class="product__price">$215</div>
+                </div>
+                <div class="content__product">
+                    <div class="product__img"></div>
+                    <div class="product__tittle">Day at the Beach</div>
+                    <div class="product__description">Summer Collection</div>
+                    <div class="product__price">$145</div>
+                </div>
+            </div>
+        </div>
+        <div class="bot">
+            <div class="bot__info">
+                <div>
+                    <div class="image-wrapper"></div>
+                    <div class="bot__info-tittle">Free returns</div>
+                    <div class="bot__info-description">
+                        <p>Not what you expected? Place it back in the parcel and attach the pre-paid postage stamp.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper"></div>
+                    <div class="bot__info-tittle">Same day delivery</div>
+                    <div class="bot__info-description">
+                        <p>We offer a delivery service that was never been done before. Checkout today and receive your products within hours.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper"></div>
+                    <div class="bot__info-tittle">For the planet</div>
+                    <div class="bot__info-description">
+                        <p>We’ve pledged 1% of sales to the preservation and restoration of the natural environment.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-1">
+                <div>
+                    <div class="footer-1__tittle-group">Products</div>
+                    <ul>
+                        <li>Bags</li>
+                        <li>Tees</li>
+                        <li>Shoes</li>
+                        <li>Objects</li>
+                        <li>Home Goods</li>
+                        <li>Accessoires</li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-1__tittle-group">Company</div>
+                    <ul>
+                        <li>Who we are</li>
+                        <li>Sustainability</li>
+                        <li>Press</li>
+                        <li>Careers</li>
+                        <li>Terms & Conditions</li>
+                        <li>Privacy</li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-1__tittle-group">Customer Service</div>
+                    <ul>
+                        <li>Contact</li>
+                        <li>Shipping</li>
+                        <li>Returns</li>
+                        <li>Waranty</li>
+                        <li>Secure Payments</li>
+                        <li>FAQ</li>
+                        <li>Find a store</li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="footer-1__tittle-group">Sign up for our newsletter</div>
+                    <div>The latest deals and savings, sent to your inbox weekly</div>
+                    <div>
+                        <input type="text">
+                        <button>Sign up</button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-2">
+                <div>
+                    © 2022 Cool Fashion Inc. All rights reserved.
+                </div>
+            </div>
+        </div>
+
+               
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
