--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/font-inter-regular.css">
-    <link rel="stylesheet" href="/css/wrapper.css">
-    <link rel="stylesheet" href="/Shop-Piece-Challenge/css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font-inter-regular.css">
+    <link rel="stylesheet" href="./css/wrapper.css">
+    <link rel="stylesheet" href="./Shop-Piece-Challenge/css/main.css">
     <title>Shop-Piece-Challenge</title>
 </head>
 <body>
