--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/font-inter-regular.css">
-    <link rel="stylesheet" href="/css/wrapper.css">
-    <link rel="stylesheet" href="/Flexbox-Challenges/css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font-inter-regular.css">
+    <link rel="stylesheet" href="./css/wrapper.css">
+    <link rel="stylesheet" href="./Flexbox-Challenges/css/main.css">
     <title>Flexbox-Challenges</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <main>
         <div class="cards-wrapper">
             <div class="card-container">
-                <img src="/Flexbox-Challenges/images/c-d-x-PDX_a_82obo-unsplash 1.png" alt="headphones"/>
+                <img src="./Flexbox-Challenges/images/c-d-x-PDX_a_82obo-unsplash 1.png" alt="headphones"./>
                 <div class="card__content">
                     <a href="#">Shopping</a>
                     <h2>AKG N700NCM2</h2>
@@ -33,7 +33,7 @@
                             <div>17-001, Batsumi</div>
                         </div>
                         <div class="adress__caret">
-                            <img src="/Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
+                            <img src="./Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
                         </div>
                     </div>
                     <hr>
@@ -47,13 +47,13 @@
                     <div class="detail__top-container">
                         <div class="top__tittle">
                             <div class="tittle__caret-wrapper">
-                                <img src="/Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
+                                <img src="./Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
                             </div>
                             <h2>Order Details</h2>
                         </div>
                         <div class="bottom__tittle">
                             <div class="bottom__img-wrapper">
-                                <img src="/Flexbox-Challenges/images/headphonesmini.svg" alt="article-img">
+                                <img src="./Flexbox-Challenges/images/headphonesmini.svg" alt="article-img">
                             </div>
                             <div class="bottom__right-container">
                                 <div class="right__tittle-wrapper">
@@ -77,7 +77,7 @@
                                 <div>17-001, Batsumi</div>
                             </div>
                             <div class="adress__caret">
-                                <img src="/Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
+                                <img src="./Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
                             </div>
                         </div>
                         <div class="detail__payment detail-tittles">Payment Method</div>
@@ -88,7 +88,7 @@
                                 <div>****-0921</div>
                             </div>
                             <div class="adress__caret">
-                                <img src="/Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
+                                <img src="./Flexbox-Challenges/assets/icons/Vector-right.svg" alt="caret">
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                     <div class="order__top">
                         <div class="top__item">
                             <div class="item__img">
-                                <img src="/Flexbox-Challenges/images/air-jordan.svg" alt="Air Jordan">
+                                <img src="./Flexbox-Challenges/images/air-jordan.svg" alt="Air Jordan">
                             </div>
                             <div class="item__detail">
                                 <div>Air Jordan 1 High</div>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="top__item">
                             <div class="item__img">
-                                <img src="/Flexbox-Challenges/images/dunk-low.svg" alt="Dunk Low">
+                                <img src="./Flexbox-Challenges/images/dunk-low.svg" alt="Dunk Low">
                             </div>
                             <div class="item__detail">
                                 <div>Dunk Low Light Bone</div>
@@ -159,7 +159,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="/index.html">Return</a>
+            <a href="../index.html">Return</a>
         </div> 
     </footer>
 </body>
