--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -20,7 +20,7 @@
         <div class="top">
             <nav class="nav-bar">
                 <div>
-                    <img src="/Shop-Piece-Challenge/images/logo.svg">
+                    <img src="./Shop-Piece-Challenge/images/logo.svg">
                 </div>
                 <div>
                     <ul>
@@ -36,7 +36,7 @@
                         <li><a>Help</a></li>
                         <li>
                             <div>
-                                <img src="/Shop-Piece-Challenge/images/bag.svg">
+                                <img src="./Shop-Piece-Challenge/images/bag.svg">
                                 <div>0</div>
                             </div>
                         </li>
@@ -59,7 +59,7 @@
                         Shop the collection
                     </div>
                     <div>
-                        <img src="/Shop-Piece-Challenge/images/right-row.svg">
+                        <img src="./Shop-Piece-Challenge/images/right-row.svg">
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="/index.html">Return</a></li>
+            <a href="../index.html">Return</a></li>
         </div> 
     </footer>
 </body>
