--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -159,7 +159,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="../index.html">Return</a>
+            <a href="/DevhausLeipzig-Camp-9/index.html">Return</a>
         </div> 
     </footer>
 </body>
