--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -169,7 +169,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="../index.html">Return</a></li>
+            <a href="/DevhausLeipzig-Camp-9/index.html">Return</a></li>
         </div> 
     </footer>
 </body>
