--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -46,7 +46,7 @@
             <div class="top__spotlight">
                 <h1>New arrivals are here</h1>
                 <p>The new arrivals have, well, newly arrived. Check out the latest options from our summer small-batch release while they’re still in stock</p>
-                <button>Shop new arrivals</button>
+                <a>Shop new arrivals</a>
             </div>
         </div>
         <div class="mid">
