js-dom-practice upload

--- a/shop-piece-challenge/trendingProducts.html
+++ b/shop-piece-challenge/trendingProducts.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__wrapper">
-            <h1>DevHaus Leipzig / Shop-Piece-Challenge</h1>
+            <h1>DevHaus Leipzig / Trending-Products</h1>
         </div>
     </header>
     <main> 
@@ -43,72 +43,41 @@
                     </ul>
                 </div>
             </nav>
-            <div class="top__spotlight">
-                <h1>New arrivals are here</h1>
-                <p>The new arrivals have, well, newly arrived. Check out the latest options from our summer small-batch release while they’re still in stock</p>
-                <a>Shop new arrivals</a>
+            <div class="tittle-trend bg-white">
+                <h2>Trending Products</h2>
+                <p>Checkout or trending products. Thoughtfully designed products for every occasion.</p>
             </div>
         </div>
-        <div class="mid-trend">
-            <div class="mid__header">
-                <div class="header__wrapper">
-                    <h2>Trending Products</h2>
-                </div>
+        <div class="mid-trend bg-white">
+            <div class="mid__header-trend">
                 <div>
-                    <a href="/Shop-Piece-Challenge/trendingProducts.html">Shop the collection<img class="collection-row" src="/Shop-Piece-Challenge/images/right-row.svg"></a>
+                    <div>
+                        <div>Category</div>
+                        <div>1</div>
+                        <div>
+                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                        </div>
+                    </div>
+                    <div>
+                        <div>Color</div>
+                        <div>
+                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                        </div>
+                    </div>
+                    <div>
+                        <div>Sizes</div>
+                        <div>
+                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                        </div>
+                    </div>
                 </div>
+                <div></div>
             </div>
             <div class="mid__content">
-                <div class="content__product">
-                    <div class="product__img"></div>
-                    <div class="product__tittle">Mens Ensemble</div>
-                    <div class="product__description">Business Casual</div>
-                    <div class="product__price">$240</div>
-                </div>
-                <div class="content__product">
-                    <div class="product__img"></div>
-                    <div class="product__tittle">Air Jordan High</div>
-                    <div class="product__description">Limited Edition</div>
-                    <div class="product__price">$195</div>
-                </div>
-                <div class="content__product">
-                    <div class="product__img"></div>
-                    <div class="product__tittle">Womens Ensemble</div>
-                    <div class="product__description">Autumn Collection</div>
-                    <div class="product__price">$215</div>
-                </div>
-                <div class="content__product">
-                    <div class="product__img"></div>
-                    <div class="product__tittle">Day at the Beach</div>
-                    <div class="product__description">Summer Collection</div>
-                    <div class="product__price">$145</div>
-                </div>
+                
             </div>
         </div>
         <div class="bot">
-            <div class="bot__info">
-                <div>
-                    <div class="image-wrapper"></div>
-                    <div class="bot__info-tittle">Free returns</div>
-                    <div class="bot__info-description">
-                        <p>Not what you expected? Place it back in the parcel and attach the pre-paid postage stamp.</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="image-wrapper"></div>
-                    <div class="bot__info-tittle">Same day delivery</div>
-                    <div class="bot__info-description">
-                        <p>We offer a delivery service that was never been done before. Checkout today and receive your products within hours.</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="image-wrapper"></div>
-                    <div class="bot__info-tittle">For the planet</div>
-                    <div class="bot__info-description">
-                        <p>We’ve pledged 1% of sales to the preservation and restoration of the natural environment.</p>
-                    </div>
-                </div>
-            </div>
             <div class="footer-1">
                 <div>
                     <div class="footer-1__tittle-group">Products</div>
