--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <div>
             <ul>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/Flexbox-Challenges/index.html">Flexbox-Challenge</a>
+                    <a href="/Flexbox-Challenges/index.html">Flexbox-Challenge</a>
                 </li>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/index.html">Shop-Piece-Challenge</a>
+                    <a href="/Shop-Piece-Challenge/index.html">Shop-Piece-Challenge</a>
+                </li>
+                <li>
+                    <a href="/js-dom-practice-1/index.html">js-dom-practice-1</a>
                 </li>
             </ul>
         </div>
