git web repository changes

--- a/Shop-Piece-Challenge/index.html
+++ b/Shop-Piece-Challenge/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/font-inter-regular.css">
-    <link rel="stylesheet" href="/css/wrapper.css">
-    <link rel="stylesheet" href="/Shop-Piece-Challenge/css/main.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/reset.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/font-inter-regular.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/wrapper.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/css/main.css">
     <title>Shop-Piece-Challenge</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="top">
             <nav class="nav-bar">
                 <div>
-                    <img src="/Shop-Piece-Challenge/images/logo-shop.svg">
+                    <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/logo-shop.svg">
                 </div>
                 <div>
                     <ul>
@@ -36,7 +36,7 @@
                         <li><a>Help</a></li>
                         <li>
                             <div>
-                                <img src="/Shop-Piece-Challenge/images/bag.svg">
+                                <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/bag.svg">
                                 <div>0</div>
                             </div>
                         </li>
@@ -49,13 +49,13 @@
                 <a>Shop new arrivals</a>
             </div>
         </div>
-        <div class="mid-trend">
+        <div class="mid">
             <div class="mid__header">
                 <div class="header__wrapper">
                     <h2>Trending Products</h2>
                 </div>
                 <div>
-                    <a href="/Shop-Piece-Challenge/trendingProducts.html">Shop the collection<img class="collection-row" src="/Shop-Piece-Challenge/images/right-row.svg"></a>
+                    <a href="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/trendingProducts.html">Shop the collection<img class="collection-row" src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/right-row.svg"></a>
                 </div>
             </div>
             <div class="mid__content">
@@ -162,7 +162,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="/index.html">Return</a></li>
+            <a href="/DevhausLeipzig-Camp-9/index.html">Return</a></li>
         </div> 
     </footer>
 </body>
