root links updated

--- a/shop-piece-challenge/trendingProducts.html
+++ b/shop-piece-challenge/trendingProducts.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/font-inter-regular.css">
-    <link rel="stylesheet" href="/css/wrapper.css">
-    <link rel="stylesheet" href="/Shop-Piece-Challenge/css/main.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/reset.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/font-inter-regular.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/wrapper.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/css/main.css">
     <title>Shop-Piece-Challenge</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="top">
             <nav class="nav-bar">
                 <div>
-                    <img src="/Shop-Piece-Challenge/images/logo-shop.svg">
+                    <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/logo-shop.svg">
                 </div>
                 <div>
                     <ul>
@@ -36,7 +36,7 @@
                         <li><a>Help</a></li>
                         <li>
                             <div>
-                                <img src="/Shop-Piece-Challenge/images/bag.svg">
+                                <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/bag.svg">
                                 <div>0</div>
                             </div>
                         </li>
@@ -55,19 +55,19 @@
                         <div>Category</div>
                         <div>1</div>
                         <div>
-                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                            <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/caret-down.png">
                         </div>
                     </div>
                     <div>
                         <div>Color</div>
                         <div>
-                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                            <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/caret-down.png">
                         </div>
                     </div>
                     <div>
                         <div>Sizes</div>
                         <div>
-                            <img src="/Shop-Piece-Challenge/images/caret-down.png">
+                            <img src="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/images/caret-down.png">
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a href="/index.html">Return</a></li>
+            <a href="/DevhausLeipzig-Camp-9/index.html">Return</a></li>
         </div> 
     </footer>
 </body>
