--- a/Flexbox-Challenges/index.html
+++ b/Flexbox-Challenges/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/reset.css">
     <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/font-inter-regular.css">
     <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/wrapper.css">
-    <link rel="stylesheet" href="/../Flexbox-Challenges/css/main.css">
+    <link rel="stylesheet" href="../Flexbox-Challenges/css/main.css">
     <title>Flexbox-Challenges</title>
 </head>
 <body>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="top__item">
                             <div class="item__img">
-                                <img src="/Flexbox-Challenges/images/dunk-low.svg" alt="Dunk Low">
+                                <img src="/DevhausLeipzig-Camp-9/Flexbox-Challenges/images/dunk-low.svg" alt="Dunk Low">
                             </div>
                             <div class="item__detail">
                                 <div>Dunk Low Light Bone</div>
