--- a/practice-time/excersism.org/index.html
+++ b/practice-time/excersism.org/index.html
@@ -24,6 +24,9 @@
                 <li>
                     <a href="/practice-time/excersism.org/annalyns.html">Annalyn's Infiltration</a>
                 </li>
+                <li>
+                    <a href="/practice-time/excersism.org/freelancer-rates.html">Freelancer Rates</a>
+                </li>
             </ul>
 
         </div>
