--- a/practice-time/index.html
+++ b/practice-time/index.html
@@ -21,6 +21,9 @@
                 <li>
                     <a href="/practice-time/excersism.org/index.html">exercism.org</a>
                 </li>
+                <li>
+                    <a href="/practice-time/discord-exercises/index.html">Discord DevHaus Exercices</a>
+                </li>
             </ul>
 
         </div>
