js-dom-practice ready
finished

--- a/js-dom-practice-2/index.html
+++ b/js-dom-practice-2/index.html
@@ -42,6 +42,8 @@
 		<div id="blog">
 		<ul id="blog-list">
 		</ul>
+		<button id="add-btn">Add Content</button>
+		<div id="box-with-events" style="width:25px; height: 25px; min-width: 5px; max-width: 30px; background-color: blueviolet;"></div>
 	</div>
 	</main>
 
@@ -55,8 +57,7 @@
 							<h4> Address </h4>
 						</li>
 						<li>
-							<p>Flossplatz 6<br>
-								04107 Leipzig, Germany</p>
+							<p id="streetAddress"></p>
 						</li>
 					</ul>
 				</div>
