--- a/practice-time/discord-exercises/index.html
+++ b/practice-time/discord-exercises/index.html
@@ -11,7 +11,10 @@
     <div>
         <ul>
             <li>
-                <a href="/practice-time/discord-exercises/js-challenge-20-03-2023.html">Js challenge 20/02/2023</a>
+                <a href="/DevhausLeipzig-Camp-9/practice-time/discord-exercises/js-challenge-20-03-2023.html">Js challenge 20/02/2023</a>
+            </li>
+            <li>
+                <a href="/DevhausLeipzig-Camp-9/practice-time/discord-exercises/grid-challenge.html">Grid Challenge</a>
             </li>
         </ul>
     </div>
