--- a/assets/base-template/base.html
+++ b/assets/base-template/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/font-inter-regular.css">
-    <link rel="stylesheet" href="/css/wrapper.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/reset.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/poppins-v20-latin.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/wrapper.css">
     <title></title>
 </head>
 <body>
     <header class="header">
         <div class="header__wrapper">
-            <h1>DevHaus Leipzig / Practice-time / exercism.org / Lucian's Luscious Lasagna</h1>
+            <h1>DevHaus Leipzig /  /  </h1>
         </div>
     </header>
     <main> 
