--- a/practice-time/discord-exercises/index.html
+++ b/practice-time/discord-exercises/index.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/practice-time/discord-exercises/js/21-02-2023.js"></script>
-    <title>List of assignment</title>
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/reset.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/poppins-v20-latin.css">
+    <link rel="stylesheet" href="/DevhausLeipzig-Camp-9/css/wrapper.css">
+    <title></title>
 </head>
 <body>
-    <div>
-        <ul>
-            <li>
-                <a href="/DevhausLeipzig-Camp-9/practice-time/discord-exercises/js-challenge-20-03-2023.html">Js challenge 20/02/2023</a>
-            </li>
-            <li>
-                <a href="/DevhausLeipzig-Camp-9/practice-time/discord-exercises/grid-challenge.html">Grid Challenge</a>
-            </li>
-        </ul>
-    </div>
+    <header class="header">
+        <div class="header__wrapper">
+            <h1>DevHaus Leipzig /  /  </h1>
+        </div>
+    </header>
+    <main> 
+        <div>
+            <ul>
+                <li>
+                    <a href="/DevhausLeipzig-Camp-9/practice-time/discord-exercises/js-challenge-20-03-2023.html">Js challenge 20/02/2023</a>
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <a href="/DevhausLeipzig-Camp-9/index.html">Return</a></li>
+        </div> 
+    </footer>
 </body>
 </html>
