--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
         <div>
             <ul>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/Flexbox-Challenges/index.html">Flexbox-Challenge(NO RESPONSIVE)</a>
+                    <a href="/DevhausLeipzig-Camp-9/Flexbox-Challenges/index.html">Flexbox-Challenge</a>
                 </li>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/index.html">Shop-Piece-Challenge(NO RESPONSIVE)</a>
+                    <a href="/DevhausLeipzig-Camp-9/Shop-Piece-Challenge/index.html">Shop-Piece-Challenge</a>
                 </li>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/js-dom-practice-1/index.html">js-dom-practice-1(NO RESPONSIVE)</a>
+                    <a href="/DevhausLeipzig-Camp-9/js-dom-practice-1/index.html">js-dom-practice-1</a>
+                </li>
+                <li>
+                    <a href="/DevhausLeipzig-Camp-9/js-dom-practice-2/index.html"></a>
+                </li>
+                <li>
+                    <a href="/DevhausLeipzig-Camp-9/practice-time/index.html"></a>
                 </li>
             </ul>
         </div>
