--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a href="/DevhausLeipzig-Camp-9/js-dom-practice-1/index.html">js-dom-practice-1</a>
                 </li>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/js-dom-practice-2/index.html"></a>
+                    <a href="/DevhausLeipzig-Camp-9/js-dom-practice-2/index.html">js-dom-practice-2</a>
                 </li>
                 <li>
-                    <a href="/DevhausLeipzig-Camp-9/practice-time/index.html"></a>
+                    <a href="/DevhausLeipzig-Camp-9/practice-time/index.html">practice time</a>
                 </li>
             </ul>
         </div>
